# co2-meal-planner

./: Pipfile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
notebooks/: example.ipynb  example.py
src/co2_meal_planner/: slv_wrapper.py
src/ifk_co2_meal_planner/: rdi.py  slv_wrapper.py
src/ifk_co2_meal_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_unit.py
