[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ifk-co2-meal-planner"
version = "0.1.0"
description = "For evaluation of nutrition and CHG of meals."
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "IFK", email = "info@ingenjorsarbeteforklimatet.se" },
]
requires-python = ">=3.9"
dependencies = ["requests==2.31.0", 
                "pandas==2.2.0",
                "matplotlib==3.8.2",
                "pyarrow==15.0.0"
]

[project.optional-dependencies]
lint = [
    "ruff ~= 0.1",
]
type = ["mypy ~= 1.7", "types-requests ~= 2.28", "pandas-stubs ~= 1.5"]
test = ["pytest ~= 7.1", "coverage ~= 6.5", "pytest-cov ~= 4.0"]
doc = [
    "mkdocs ~= 1.4",
    "mkdocs-material ~= 8.5",
    "mkdocstrings[python] ~= 0.19",
]
dev = [
    "ifk-co2-meal-planner[lint]",
    "ifk-co2-meal-planner[type]",
    "ifk-co2-meal-planner[test]",
    "ifk-co2-meal-planner[doc]",
    "pre-commit ~= 2.20",
    "ipykernel ~= 6.26",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["material"]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "W", "F", "B", "D", "I", "S"]
ignore = ["D203", "D213", "S101"]
unfixable = ["B", "S"]
pydocstyle.convention = "google"

[tool.mypy]
ignore_missing_imports = true
